--- a/index.html
+++ b/index.html
@@ -138,24 +138,9 @@
                               data-frame_0="x:-50,-40,-30,-18;"
                               data-frame_1="st:1700;sp:1000;"
                               data-frame_999="o:0;st:w;sR:6300;"  style="z-index:8;font-family:'Marcellus';">
-                              Nos representa <span class="globalcolor pbmit-text-underline">la</span><br>
-                              <span class="globalcolor pbmit-text-underline">Seriedad</span> a ustedes<br>
-                              los representamos <br> nosotros
+                              Especialistas en  derecho <br>PENAL / CIVIL<br>con gran referencia en<br> Alcoholemia e Inmobiliario
                               </rs-layer>
-                              <rs-layer
-                              id="slider-1-slide-1-layer-7" 
-                              data-type="text"
-                              data-color="#233355"
-                              data-rsp_ch="on"
-                              data-xy="xo:30px,30px,22px,13px;y:m;yo:91px,73px,55px,33px;"
-                              data-text="w:normal;s:18,17,12,7;l:28,22,16,9;"
-                              data-vbility="t,t,f,f"
-                              data-frame_0="x:-50,-40,-30,-18;"
-                              data-frame_1="st:2000;sp:1000;"
-                              data-frame_999="o:0;st:w;sR:6000;"
-                              style="z-index:9;font-family:'Montserrat';">
-                              LEGALES, FIRMA DE ABOGADOS.
-                              </rs-layer>
+                              
                               <a
                               id="slider-1-slide-1-layer-8" 
                               class="rs-layer pbmit-rev-btn-effect rev-btn"
@@ -186,10 +171,23 @@
                               data-frame_0="x:-50,-40,-30,-18;"
                               data-frame_1="st:1700;sp:1000;"
                               data-frame_999="o:0;st:w;sR:6300;"
-                              style="z-index:8;font-family:'Marcellus';"
-                              >Especialistas en  derecho <br><span class="globalcolor pbmit-text-underline">PENAL / CIVIL</span><br>
-                              <span class="globalcolor pbmit-text-underline">con gran </span> referencia en<br> ALCOHOLEMIA<br>
-                              E INMOBILIARIO
+                              style="z-index:8;font-family:'Marcellus'; padding-bottom: 10px;"
+                              >Nos representa la seriedad<br> a ustedes
+                              los representamos <br>NOSOTROS
+                              </rs-layer>
+                              <rs-layer
+                              id="slider-1-slide-1-layer-7" 
+                              data-type="text"
+                              data-color="#233355"
+                              data-rsp_ch="on"
+                              data-xy="xo:30px,30px,22px,13px;y:m;yo:91px,73px,55px,33px;"
+                              data-text="w:normal;s:18,17,12,7;l:28,22,16,9;"
+                              data-vbility="t,t,f,f"
+                              data-frame_0="x:-50,-40,-30,-18;"
+                              data-frame_1="st:2000;sp:1000;"
+                              data-frame_999="o:0;st:w;sR:6000;"
+                              style="z-index:9;font-family:'Montserrat';">
+                              LEGALES, FIRMA DE ABOGADOS / MEDELLÍN
                               </rs-layer>
                               <a
                               id="slider-1-slide-2-layer-8" 
@@ -205,7 +203,7 @@
                               data-frame_1="st:2400;sp:1000;"
                               data-frame_999="o:0;st:w;sR:5600;"
                               data-frame_hover="bgc:#0a1d35;bor:0px,0px,0px,0px;bri:120%;"
-                              style="z-index:10;background-color:#b8967e;font-family:'Marcellus';">
+                              style="z-index:10;background-color:#b8967e;font-family:'Marcellus'; padding-top: 10px;">
                               <span class="pbmit-rev-button-text">Consulta tu abogado</span> 
                               </a>
                         </rs-slide>
