--- a/index.html
+++ b/index.html
@@ -733,9 +733,9 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Medical Negligence</a></h3>
+                                       <a href="#">Contratos Inmobiliarios</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Business</a>
+                                       <a href="#" rel="tag">REALSTATED</a>
                                     </div>
                                  </div>
                               </div>
@@ -756,9 +756,9 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Tax Consultancy</a></h3>
+                                       <a href="#">Conformación de empresas</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Financial</a>
+                                       <a href="#" rel="tag">Comercial</a>
                                     </div>
                                  </div>
                               </div>
@@ -779,9 +779,9 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Trade and Markets</a></h3>
+                                       <a href="#">Adquisición de bienes</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Business</a>
+                                       <a href="#" rel="tag">Civil</a>
                                     </div>
                                  </div>
                               </div>
@@ -802,9 +802,9 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Marriage Agreements</a></h3>
+                                       <a href="#">Divorcios</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Personal</a>
+                                       <a href="#" rel="tag">Civil</a>
                                     </div>
                                  </div>
                               </div>
@@ -815,7 +815,7 @@
                   </div>
                   <div class="portfolio-btn">
                      <a href="#" class="pbmit-btn pbmit-btn-inline">
-                        <span>View All Portfolio</span>
+                        <span>Contratar un abogado</span>
                      </a>
                   </div>
                </div>
