--- a/alcoholemialegales.html
+++ b/alcoholemialegales.html
@@ -78,7 +78,7 @@
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
                                                 <li><a href="nosotros.html#equipo">Abogados</a></li>
-                                                <li><a href="#">FAQ</a></li>
+                                                <li><a href="faq.html">Faq</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
@@ -92,7 +92,7 @@
 
                                           
                                           <li class="">
-                                             <a href="#">FAQ</a></li>
+                                             <a href="faq.html">Faq</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -104,13 +104,13 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="#" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
                               </div>
                            </div>
-                           <button type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
+                           <button type="button" style="font-size: 24px; background-color: #198754; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
                              <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> <i class="fa fa-whatsapp"></i></a>
                            </button>
                         </div>
@@ -176,7 +176,7 @@
                               data-frame_1="st:2000;sp:1000;"
                               data-frame_999="o:0;st:w;sR:6000;"
                               style="z-index:9;font-family:'Montserrat';"
-                           >Sabemos la importacia de llevar estos casos a su solución. En legales tenemos respuestas. 
+                           >Sabemos la importacia de llevar<br> estos casos a su solución.<br> En legales tenemos respuestas. 
                            </rs-layer><!--
 
                            --><a
@@ -250,13 +250,13 @@
                               data-frame_1="st:2000;sp:1000;"
                               data-frame_999="o:0;st:w;sR:6000;"
                               style="z-index:9;font-family:'Montserrat';"
-                           >El procedimiento para detectar el grado de alcohol es la clave para proceder. 
+                           >El procedimiento para detectar el grado<br> de alcohol es la clave para proceder. 
                            </rs-layer><!--
 
                            --><a
                               id="slider-1-slide-3-layer-8" 
                               class="rs-layer pbmit-rev-btn-effect rev-btn"
-                              href="" target="_self"
+                              href="#solicitud" target="_self"
                               data-type="button"
                               data-rsp_ch="on"
                               data-xy="xo:30px;y:m;yo:215px,173px,124px,106px;"
@@ -342,7 +342,7 @@
             <section>
                <div class="container-fluid g-0">
                   <div class="video-section-home2">
-                     <a href="https://www.youtube.com/watch?v=7e90gBu4pas" class="pbmin-lightbox-video">
+                     <a href="https://www.youtube.com/watch?v=qKQbzvPg52U" class="pbmin-lightbox-video">
                         <i class="fa fa-play"></i>
                      </a>
                   </div>
@@ -350,7 +350,7 @@
             </section>
             <!-- Lightbox End --> 
             <!-- Appointment Start -->
-            <section data-cursor="white-color">
+            <section data-cursor="white-color" id="solicitud">
                <div class="container-fluid">
                   <div class="row g-0">
                      <div class="col-xl-6 col-md-12">
@@ -359,28 +359,19 @@
                      <div class="col-xl-6 col-md-12">
                         <div class="contact-form-home2">
                            <div class="pbmit-heading bg-color-dark animation-style2">
-                              <h2 class="pbmit-title"> Expertos en Alcoholemia</h2>
+                              <h2 class="pbmit-title"> Necesitas ayuda?</h2>
                            </div>
                            <form class="pbmit-form-style-1">
                               <div class="row mb-3 g-3">
                                  <div class="col-lg-6 col-sm-6">
-                                    <input type="text" class="form-control" placeholder="Your name" name="Your name">
-                                 </div>
-                                 <div class="col-lg-6 col-sm-6">
-                                    <input type="text" class="form-control" placeholder="Last Name" name="Last Name">
-                                 </div>
-                                 <div class="col-lg-6 col-sm-6">
-                                    <input type="text" class="form-control" placeholder="Subject" name="Subject">
-                                 </div>
-                                 <div class="col-lg-6 col-sm-6">
-                                    <input type="email" class="form-control" placeholder="Email" name="Email">
+                                    <input type="text" class="form-control" placeholder="Dinos tu nombre" name="Your name">
                                  </div>
                                  <div class="col-lg-12 col-sm-12">
-                                    <textarea class="form-control" name="message" rows="4" placeholder="Comment*"></textarea>
+                                    <textarea class="form-control" name="message" rows="4" placeholder="Mensaje*"></textarea>
                                  </div>
                                  <div class="col-lg-12 col-sm-12">
                                     <a href="#" class="pbmit-btn pbmit-btn-white">
-                                       <span>Send Message</span>
+                                       <span>Enviar mensaje</span>
                                     </a>
                                  </div>
                               </div>
@@ -439,12 +430,12 @@
                         <h2 class="widget-title">Enlaces</h2>
                         <div class="textwidget">
                            <ul>
-                              <li><a href="#">Penal</a></li>
-                              <li><a href="#">Civil</a></li>
-                              <li><a href="#">Inmobiliario</a></li>
-                              <li><a href="#">Nosotros</a></li>
-                              <li><a href="#">Historias</a></li>
-                              <li><a href="#">Contacto</a></li>
+                                <li><a href="derechopenal.html">Penal</a></li>
+                              <li><a href="derechocivil.html">Civil</a></li>
+                              <li><a href="derechoinmobiliario.html">Inmobiliario</a></li>
+                              <li><a href="nosotros.html">Nosotros</a></li>
+                              <li><a href="index.html">Historias</a></li>
+                              <li><a href="contact-us.html">Contacto</a></li>
                            </ul>
                         </div>
                      </div>
