--- a/derechopenal.html
+++ b/derechopenal.html
@@ -78,7 +78,7 @@
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
                                                 <li><a href="nosotros.html#equipo">Abogados</a></li>
-                                                <li><a href="#">FAQ</a></li>
+                                                <li><a href="faq.html">Faq</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
@@ -92,7 +92,7 @@
 
                                           
                                           <li class="">
-                                             <a href="#">FAQ</a></li>
+                                             <a href="faq.html">Faq</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -104,13 +104,13 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="#" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
                               </div>
                            </div>
-                           <button type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
+                           <button type="button" style="font-size: 24px; background-color: #198754; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
                              <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> <i class="fa fa-whatsapp"></i></a>
                            </button>
                         </div>
@@ -469,12 +469,12 @@
                         <h2 class="widget-title">Enlaces</h2>
                         <div class="textwidget">
                            <ul>
-                              <li><a href="#">Penal</a></li>
-                              <li><a href="#">Civil</a></li>
-                              <li><a href="#">Inmobiliario</a></li>
-                              <li><a href="#">Nosotros</a></li>
-                              <li><a href="#">Historias</a></li>
-                              <li><a href="#">Contacto</a></li>
+                               <li><a href="derechopenal.html">Penal</a></li>
+                              <li><a href="derechocivil.html">Civil</a></li>
+                              <li><a href="derechoinmobiliario.html">Inmobiliario</a></li>
+                              <li><a href="nosotros.html">Nosotros</a></li>
+                              <li><a href="index.html">Historias</a></li>
+                              <li><a href="contact-us.html">Contacto</a></li>
                            </ul>
                         </div>
                      </div>
