--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                                              <ul>
                                                 <li><a href="nosotros.html">Quienes somos</a></li>
                                                 <li><a href="nosotros.html#equipo">Abogados</a></li>
-                                                <li><a href="#">FAQ</a></li>
+                                                <li><a href="servicios.html">Servicios</a></li>
+                                                <li><a href="faq.html">Faq</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="">Especialidades</a>
@@ -95,7 +96,7 @@
 
                                           
                                           <li class="">
-                                             <a href="#">FAQ</a></li>
+                                             <a href="faq.html">Faq</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -107,13 +108,13 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="#" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
                               </div>
                            </div>
-                           <button type="button" style="font-size: 24px; background-color: #b8967e; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
+                           <button type="button" style="font-size: 24px; background-color: #198754; color: #ffffff; width: 60px; height: 60px; border-radius: 50%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);"> 
                              <a href="https://api.whatsapp.com/send?phone=573026231220&text=Hola%21%20Quisiera%20m%C3%A1s%20contratar%20un%20defensor" target="_blank" style="color: #f8f9fa;    font-size: 28px;"> <i class="fa fa-whatsapp"></i></a>
                            </button>
                         </div>
@@ -719,7 +720,7 @@
             <!-- Portfolio Start -->
             <section class="portfolio-section-home4  pbmit-element-portfolio-style-2">
                <div class="container">
-                  <div class="row" data-cursor-text="Ver">
+                  <div class="row" data-cursor-text="consultar">
                      <div class="col-md-6">
                         <article class="pbmit-portfolio-style-2 business pbmit-odd ">
                            <div class="pbminfotech-post-content">
@@ -733,13 +734,13 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Contratos Inmobiliarios</a></h3>
+                                       <a href="contact-us.html">Contratos Inmobiliarios</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">REALSTATED</a>
+                                       <a href="contact-us.html" rel="tag">REALSTATED</a>
                                     </div>
                                  </div>
                               </div>
-                              <a class="pbmit-link" title="Medical Negligence" href="#"></a>
+                              <a class="pbmit-link" title="Medical Negligence" href="contact-us.html"></a>
                            </div>
                         </article>
                      </div>
@@ -756,13 +757,13 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Conformación de empresas</a></h3>
+                                       <a href="contact-us.html">Conformación de empresas</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Comercial</a>
+                                       <a href="contact-us.html" rel="tag">Comercial</a>
                                     </div>
                                  </div>
                               </div>
-                              <a class="pbmit-link" title="Tax Consultancy" href="#"></a>
+                              <a class="pbmit-link" title="Tax Consultancy" href="contact-us.html"></a>
                            </div>
                         </article>
                      </div>
@@ -779,13 +780,13 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Adquisición de bienes</a></h3>
+                                       <a href="contact-us.html">Adquisición de bienes</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Civil</a>
+                                       <a href="contact-us.html" rel="tag">Civil</a>
                                     </div>
                                  </div>
                               </div>
-                              <a class="pbmit-link" title="Trade and Markets" href="#"></a>
+                              <a class="pbmit-link" title="Trade and Markets" href="contact-us.html"></a>
                            </div>
                         </article>
                      </div>
@@ -802,19 +803,19 @@
                               <div class="pbminfotech-box-content">
                                  <div class="pbminfotech-titlebox">
                                     <h3 class="pbmit-portfolio-title">
-                                       <a href="#">Divorcios</a></h3>
+                                       <a href="contact-us.html">Divorcios</a></h3>
                                     <div class="pbmit-port-cat">
-                                       <a href="#" rel="tag">Civil</a>
+                                       <a href="contact-us.html" rel="tag">Civil</a>
                                     </div>
                                  </div>
                               </div>
-                              <a class="pbmit-link" title="Marriage Agreements" href="#"></a>
+                              <a class="pbmit-link" title="Marriage Agreements" href="contact-us.html"></a>
                            </div>
                         </article>
                      </div>
                   </div>
                   <div class="portfolio-btn">
-                     <a href="#" class="pbmit-btn pbmit-btn-inline">
+                     <a href="contact-us.html" class="pbmit-btn pbmit-btn-inline">
                         <span>Contratar un abogado</span>
                      </a>
                   </div>
@@ -832,16 +833,16 @@
                            <div class="container">
                               <div class="row">
                                  <div class="col-lg-6 col-md-12">
-                                    <div class="pbmit-step-number">
+                                    <!-- <div class="pbmit-step-number">
                                        <h3 class="step-subtitle">100</h3>
                                        <h3 class="pbmit-number-percentage">%</h3>
-                                    </div>
-                                    <h2>Que hacemos y como se aplica El derecho inmobiliario</h2>
+                                    </div> -->
+                                    <h2>Que hacemos y como se aplica El derecho inmobiliario?</h2>
                                     <div class="pbmit-step-description">
                                        Somos especialista en el asesoramiento y gestión de: 
                                        <span class="globalcolor">
                                        <ul>
-                                          <li>Compraventa</li>
+                                          <li>Compra-venta</li>
                                           <li>Arrendamientos</li>
                                           <li>Contratos</li>
                                           <li>Construcción</li>
@@ -854,8 +855,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-hsanp-btn">
-                                    <a href="portfolio-details.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                       <span>Más detalles</span>
+                                    <a href="contact-us.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                       <span>Consulta un experto</span>
                                     </a>
                                  </div>
                               </div>
@@ -875,7 +876,7 @@
                                        <h3 class="step-subtitle">87</h3>
                                        <h3 class="pbmit-number-percentage">%</h3>
                                     </div>
-                                    <h2>Casos concretados</h2>
+                                    <h2>Casos concretados en Poblado - Medellín</h2>
                                     <div class="pbmit-step-description">En ventas y acompañamiento en adquisición de bienes y  arrendamientos. 
                                        <span class="globalcolor">
                                          Todo acerca del mercado de la vivienda.
@@ -883,8 +884,8 @@
                                     </div>
                                  </div>
                                  <div class="pbmit-hsanp-btn">
-                                    <a href="portfolio-details.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
-                                       <span>Contratar</span>
+                                    <a href="derechoinmobiliario.html" class="pbmit-btn pbmit-btn-inline pbmit-btn-inline-hover-white" target="_blank">
+                                       <span>Informarme</span>
                                     </a>
                                  </div>
                               </div>
@@ -1037,7 +1038,7 @@
                                     <div class="pbminfotech-box-img">
                                        <div class="pbmit-featured-img-wrapper">
                                           <div class="pbmit-featured-wrapper">
-                                             <img src="images/testimonial/testimonial-03.jpg" class="img-fluid" alt="">
+                                             <img src="images/testimonial/testimonial-02.jpg" class="img-fluid" alt="">
                                           </div>
                                        </div>
                                     </div>
@@ -1226,12 +1227,12 @@
                         <h2 class="widget-title">Enlaces</h2>
                         <div class="textwidget">
                            <ul>
-                              <li><a href="#">Penal</a></li>
-                              <li><a href="#">Civil</a></li>
-                              <li><a href="#">Inmobiliario</a></li>
-                              <li><a href="#">Nosotros</a></li>
-                              <li><a href="#">Historias</a></li>
-                              <li><a href="#">Contacto</a></li>
+                                <li><a href="derechopenal.html">Penal</a></li>
+                              <li><a href="derechocivil.html">Civil</a></li>
+                              <li><a href="derechoinmobiliario.html">Inmobiliario</a></li>
+                              <li><a href="nosotros.html">Nosotros</a></li>
+                              <li><a href="index.html">Historias</a></li>
+                              <li><a href="contact-us.html">Contacto</a></li>
                            </ul>
                         </div>
                      </div>
@@ -1255,6 +1256,7 @@
                         <div class="pbmit-contact-widget-lines">
                            <div class="pbmit-contact-widget-line widget-address"><a href="mailtohello@legales.com.co" style="color: #fff;"> hello@legales.com.co</a></div>
                            <div class="pbmit-contact-widget-line widget-phone"><a href="tel:302 623 1220" style="color: #fff;">302 623 1220</a> </div>
+                           <div class="pbmit-contact-widget-line widget-phone"><a href="" style="color: #fff;">Medellín - Colombia</a> </div>
                         </div>
                      </div>
                   </div>
