--- a/inicial.html
+++ b/inicial.html
@@ -81,7 +81,7 @@
                                              <ul>
                                                 <li><a href="#">Quienes somos</a></li>
                                                 <li><a href="#">Abogados</a></li>
-                                                <li><a href="#">FAQ</a></li>
+                                                <li><a href="faq.html">Faq</a></li>
                                              </ul>
                                           <li class="dropdown">
                                              <a href="#">Especialidades</a>
@@ -102,7 +102,7 @@
                                                 </ul>
                                              </li> -->
                                           <li class="">
-                                             <a href="#">FAQ</a></li>
+                                             <a href="faq.html">Faq</a></li>
                                              
                                           <li><a href="#">Abogado online</a></li>
                                        </ul>
@@ -113,7 +113,7 @@
                            <div class="pbmit-right-box">
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
-                                    <a href="#" class=" pbmit-btn pbmit-btn-global">
+                                    <a href="contact-us.html" class=" pbmit-btn pbmit-btn-global">
                                        <span class="pbmit-header-button-text-1">Asesorias</span>          
                                     </a>
                                  </div>
@@ -1220,7 +1220,7 @@
                                     <a href="#">Services</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="#">Faq</a>
+                                    <a href="faq.html">Faq</a>
                                  </li>
                                  <li class="menu-item">
                                     <a href="#">Careers</a>
