--- a/index-02.html
+++ b/index-02.html
@@ -1369,7 +1369,7 @@
                                     <a href="#">Services</a>
                                  </li>
                                  <li class="menu-item">
-                                    <a href="#">Faq</a>
+                                    <a href="faq.html">Faq</a>
                                  </li>
                                  <li class="menu-item">
                                     <a href="#">Careers</a>
