--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Legales - Firma de abogados</title>
+      <!-- Primary Meta Tags -->
+      <title>Legales | Firma de abogados en Medellín Colombia</title>
       <meta name="robots" content="noindex, follow">
-      <meta name="description" content="Abogados  en Medellin, especializados en derecho Habitacional">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta name="description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="legales.com.co" />
+      <meta property="og:title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta property="og:description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
+      <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="legales.com.co" />
+      <meta property="twitter:title" content="Legales | Firma de abogados en Medellín Colombia" />
+      <meta property="twitter:description" content="Nos encargamos de resolver conflictos y hacer cumplir normativas Civiles, Penales, Inmobiliarias, expertos en alcoholemia..." />
+      <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+      
       <!-- Favicon -->
       <link rel="shortcut icon" type="image/x-icon" href="images/fevicon.png">
       <!-- CSS
